--- a/Levantamento de Perdas/Src/Tela_Ini_2914.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Ini_2914.fx.yaml
@@ -14,7 +14,11 @@ Tela_Ini_2914 As screen:
 
     Button2_37 As button:
         Height: =122
-        OnSelect: =Navigate(Caixa_Câmbio_2914)
+        OnSelect: |-
+            =Navigate(Caixa_Câmbio_2914);
+            Set(vartela , "Caixa_Câmbio_2914");
+            //UpdateContext({TelaAnterior : LookUp(colRoleKeys ; Screen = Text("Caixa_Câmbio_2914"))})
+            LookUp(Distinct(colRoleKeys,Screen).Result, Result = vartela)
         Size: =24
         Text: ="Linha Caixa de Câmbio"
         Width: =280
@@ -24,7 +28,9 @@ Tela_Ini_2914 As screen:
 
     Button2_39 As button:
         Height: =Button2_37.Height
-        OnSelect: =Navigate(Suporte_União_2914)
+        OnSelect: |-
+            =Navigate(Suporte_União_2914);
+            Set(vartelaanterior , "Suporte_União_2914")
         Size: =24
         Text: ="Linha Suporte União"
         Width: =Button2_37.Width
