--- a/Levantamento de Perdas/Src/App.fx.yaml
+++ b/Levantamento de Perdas/Src/App.fx.yaml
@@ -1,6 +1,6 @@
 App As appinfo:
     BackEnabled: =false
-    OnStart: |-
+    OnStart: |
         =Set(
             varDelegationLimit,
             1000
@@ -27,6 +27,4 @@ App As appinfo:
                 }
             )
         );
-        
-        ClearCollect( TelaAnterior , colRoleKeys)
 
