--- a/Levantamento de Perdas/Src/Caixa_C%e2mbio_2914.fx.yaml
+++ b/Levantamento de Perdas/Src/Caixa_C%e2mbio_2914.fx.yaml
@@ -404,7 +404,7 @@ Caixa_Câmbio_2914 As screen:
         FocusedBorderThickness: =1
         Height: =88
         Icon: =Icon.Home
-        OnSelect: =Back()
+        OnSelect: =Navigate(Tela_Ini_2914)
         PaddingBottom: =22
         PaddingLeft: =22
         PaddingRight: =22
