--- a/Levantamento de Perdas/Src/Tel_Edit_Producao.fx.yaml
+++ b/Levantamento de Perdas/Src/Tel_Edit_Producao.fx.yaml
@@ -58,9 +58,7 @@
         DataSource: =[@LancamentoProducao]
         Height: =831
         Item: =BrowseGallery1.Selected
-        OnSuccess: |-
-            =If(varenviado = 1, (UpdateContext({TelaAnterior : LookUp(colRoleKeys, Role = vartela)});
-            Navigate(TelaAnterior.Screen)) , Navigate(Tel_Edit_Producao));
+        OnSuccess: =If(varenviado = 1, Navigate(TelaAnterior.Screen) , Navigate(Tel_Edit_Producao));
         Width: =Parent.Width
         Y: =103
         ZIndex: =5
@@ -1060,7 +1058,8 @@
             =If( varprod_realizada = 0, Navigate(Tel_Edit_Perdas));
             SubmitForm('Form Produção');
             Set(varenviado ,0);
-            Navigate(Tel_Edit_Perdas);
+            NewForm(Formperdas);
+            //Navigate(Tel_Edit_Perdas);;
         Size: =24
         Text: ="Salvar e Lançar Perda"
         Tooltip: ="Enviar item e ir para página de lançamento perdas"
