--- a/Levantamento de Perdas/Src/App.fx.yaml
+++ b/Levantamento de Perdas/Src/App.fx.yaml
@@ -17,14 +17,53 @@ App As appinfo:
         ClearCollect(
             colRoleKeys,
             Table(
-                {
-                    Role: "Suporte_União_2914",
-                    Screen: Suporte_União_2914
-                },
-                {
-                    Role: "Caixa_Câmbio_2914",
-                    Screen: Caixa_Câmbio_2914
-                }
+         /*{ Role: "Usinagem_Tampa";Screen: Usinagem_Tampa };
+         { Role: "Usinagem_Satélite";Screen: Usinagem_Satélite };
+         { Role: "Usinagem_Planetária";Screen: Usinagem_Planetária };
+         { Role: "Usinagem_Marcha_Ré";Screen: Usinagem_Marcha_Ré };
+         { Role: "Usinagem_Luva_5ª";Screen: Usinagem_Luva_5ª };
+         { Role: "Usinagem_Luva_3ª4ª";Screen: Usinagem_Luva_3ª4ª };
+         { Role: "Usinagem_Luva_1ª2ª";Screen: Usinagem_Luva_1ª2ª };
+         { Role: "Usinagem_Engr._CDZ_5ª";Screen: Usinagem_Engr._CDZ_5ª };
+         { Role: "Usinagem_Engr._CDZ_4ª";Screen: Usinagem_Engr._CDZ_4ª };
+         { Role: "Usinagem_Engr._CDZ_3ª";Screen: Usinagem_Engr._CDZ_3ª };
+         { Role: "Usinagem_Engr._CDT_5ª";Screen: Usinagem_Engr._CDT_5ª };
+         { Role: "Usinagem_Engr._CDT_4ª";Screen: Usinagem_Engr._CDT_4ª };
+         { Role: "Usinagem_Engr._CDT_3ª";Screen: Usinagem_Engr._CDT_3ª };
+         { Role: "Usinagem_Engr._2ª";Screen: Usinagem_Engr._2ª };
+         { Role: "Usinagem_Engr._1ª";Screen: Usinagem_Engr._1ª };
+         { Role: "Usinagem_Eixo_Secundário";Screen: Usinagem_Eixo_Secundário };
+         { Role: "Usinagem_Eixo_Primário";Screen: Usinagem_Eixo_Primário };
+         { Role: "Usinagem_Coroinha";Screen: Usinagem_Coroinha };
+         { Role: "Usinagem_Coroa_Cilíndrica";Screen: Usinagem_Coroa_Cilíndrica };
+         { Role: "Usinagem_Caixa_Diferencial_Completa";Screen: Usinagem_Caixa_Diferencial_Completa };
+         { Role: "Usinagem_Caixa_Diferencial";Screen: Usinagem_Caixa_Diferencial };
+         { Role: "Todas_Peças";Screen: Todas_Peças };
+         { Role: "SottoP_LUVAS";Screen: SottoP_LUVAS };
+         { Role: "Retífica_Satélite";Screen: Retífica_Satélite };
+         { Role: "Retífica_Planetária";Screen: Retífica_Planetária };
+         { Role: "Retífica_Marcha_Ré";Screen: Retífica_Marcha_Ré };
+         { Role: "Retífica_Luva_5ª";Screen: Retífica_Luva_5ª };
+         { Role: "Retifica_Luva_3ª4ª";Screen: Retifica_Luva_3ª4ª };
+         { Role: "Retífica_Luva_1ª2ª";Screen: Retífica_Luva_1ª2ª };
+         { Role: "Retífica_Engr._CDZ_5ª";Screen: Retífica_Engr._CDZ_5ª };
+         { Role: "Retífica_Engr._CDZ_4ª";Screen: Retífica_Engr._CDZ_4ª };
+         { Role: "Retífica_Engr._CDZ_3ª";Screen: Retífica_Engr._CDZ_3ª };
+         { Role: "Retífica_Engr._CDT_5ª";Screen: Retífica_Engr._CDT_5ª };
+         { Role: "Retífica_Engr._CDT_4ª";Screen: Retífica_Engr._CDT_4ª };
+         { Role: "Retífica_Engr._CDT_3ª";Screen: Retífica_Engr._CDT_3ª };
+         { Role: "Retífica_Engr._2ª";Screen: Retífica_Engr._2ª };
+         { Role: "Retífica_Engr._1ª";Screen: Retífica_Engr._1ª };
+         { Role: "Retífica_Eixo_Secundário";Screen: Retífica_Eixo_Secundário };
+         { Role: "Retífica_Eixo_Primário";Screen: Retífica_Eixo_Primário };
+         { Role: "Retífica_Coroa_Cilíndrica";Screen: Retífica_Coroa_Cilíndrica };
+         { Role: "Luvas_1ª2ª_/_3ª4ª_/_5ª";Screen: Luvas_1ª2ª_/_3ª4ª_/_5ª };
+         { Role: "Fornos_Cont";Screen: Fornos_Cont };
+         { Role: "Engr._CDTs_3ª_e_4ª";Screen: Engr._CDTs_3ª_e_4ª };
+         { Role: "Eixo_primário_e_secundário";Screen: Eixo_primário_e_secundário }; */
+         
+         { Role: "Suporte_União_2914", Screen: Suporte_União_2914 },
+         { Role: "Caixa_Câmbio_2914", Screen: Caixa_Câmbio_2914 }
             )
         );
 
