--- a/Levantamento de Perdas/CanvasManifest.json
+++ b/Levantamento de Perdas/CanvasManifest.json
@@ -85,7 +85,7 @@
     "DocumentAppType": "Phone",
     "DocumentLayoutHeight": 1136,
     "DocumentLayoutLockOrientation": false,
-    "DocumentLayoutMaintainAspectRatio": true,
+    "DocumentLayoutMaintainAspectRatio": false,
     "DocumentLayoutOrientation": "portrait",
     "DocumentLayoutScaleToFit": true,
     "DocumentLayoutWidth": 640,
@@ -124,6 +124,9 @@
     "Tela_Ini_2913",
     "Tela_Ini_2914",
     "Caixa_Câmbio_2914",
-    "Suporte_União_2914"
+    "Suporte_União_2914",
+    "Usinagem_Eixo_Primário",
+    "Usinagem_Eixo_Secundário",
+    "Usinagem_Coroa_Cilíndrica"
   ]
 }
