--- a/Levantamento de Perdas/Src/Tela_Ini_2911.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Ini_2911.fx.yaml
@@ -14,6 +14,9 @@ Tela_Ini_2911 As screen:
 
     Button2_1 As button:
         Height: =122
+        OnSelect: |-
+            =Navigate(Usinagem_Eixo_Primário);
+            Set(vartela , "Usinagem_Eixo_Primário");
         Size: =24
         Text: ="Usinagem Eixo Primário"
         Width: =280
@@ -32,6 +35,9 @@ Tela_Ini_2911 As screen:
 
     Button2_3 As button:
         Height: =Button2_1.Height
+        OnSelect: |-
+            =Navigate(Usinagem_Eixo_Secundário);
+            Set(vartela , "Usinagem_Eixo_Secundário");
         Size: =24
         Text: ="Usinagem Eixo Secundário"
         Width: =Button2_1.Width
@@ -66,8 +72,11 @@ Tela_Ini_2911 As screen:
 
     Button2_5 As button:
         Height: =Button2_1.Height
+        OnSelect: |-
+            =Navigate(Usinagem_Coroa_Cilíndrica);
+            Set(vartela , "Usinagem_Coroa_Cilíndrica");
         Size: =24
-        Text: ="Usinagem Eixo Secundário"
+        Text: ="Usinagem Coroa Cilíndrica"
         Width: =Button2_1.Width
         X: =Button2_1.X
         Y: =Button2_3.Y + Button2_3.Height + 25
@@ -76,7 +85,7 @@ Tela_Ini_2911 As screen:
     Button2_6 As button:
         Height: =Button2_1.Height
         Size: =24
-        Text: ="Retífica Eixo Secundário"
+        Text: ="Retífica Coroa Cilíndrica"
         Width: =Button2_1.Width
         X: =Button2_2.X
         Y: =Button2_4.Y + Button2_4.Height + 25
