--- a/Levantamento de Perdas/Src/App.fx.yaml
+++ b/Levantamento de Perdas/Src/App.fx.yaml
@@ -32,10 +32,7 @@ App As appinfo:
          { Role: "Usinagem_Engr._CDT_3ª";Screen: Usinagem_Engr._CDT_3ª };
          { Role: "Usinagem_Engr._2ª";Screen: Usinagem_Engr._2ª };
          { Role: "Usinagem_Engr._1ª";Screen: Usinagem_Engr._1ª };
-         { Role: "Usinagem_Eixo_Secundário";Screen: Usinagem_Eixo_Secundário };
-         { Role: "Usinagem_Eixo_Primário";Screen: Usinagem_Eixo_Primário };
          { Role: "Usinagem_Coroinha";Screen: Usinagem_Coroinha };
-         { Role: "Usinagem_Coroa_Cilíndrica";Screen: Usinagem_Coroa_Cilíndrica };
          { Role: "Usinagem_Caixa_Diferencial_Completa";Screen: Usinagem_Caixa_Diferencial_Completa };
          { Role: "Usinagem_Caixa_Diferencial";Screen: Usinagem_Caixa_Diferencial };
          { Role: "Todas_Peças";Screen: Todas_Peças };
@@ -61,7 +58,10 @@ App As appinfo:
          { Role: "Fornos_Cont";Screen: Fornos_Cont };
          { Role: "Engr._CDTs_3ª_e_4ª";Screen: Engr._CDTs_3ª_e_4ª };
          { Role: "Eixo_primário_e_secundário";Screen: Eixo_primário_e_secundário }; */
-         
+        
+         { Role: "Usinagem_Eixo_Secundário",Screen: Usinagem_Eixo_Secundário },
+         { Role: "Usinagem_Eixo_Primário",Screen: Usinagem_Eixo_Primário },
+         { Role: "Usinagem_Coroa_Cilíndrica",Screen: Usinagem_Coroa_Cilíndrica },
          { Role: "Suporte_União_2914", Screen: Suporte_União_2914 },
          { Role: "Caixa_Câmbio_2914", Screen: Caixa_Câmbio_2914 }
             )
